[tool.poetry]
name = "lab_4"
version = "0.1.0"
description = ""
authors = ["t106362512 <t106362512@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pip = "^22.0.4"
requests = "^2.27.1"
webdriver-manager = "^3.5.4"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
